@@ -35,7 +35,7 @@ bool LIBSPEEDTEST_EXPORT STOPBENCHMARK = false;
 
 
 TargetList::TargetList(QString projectName, QString programName, QObject *parent) : QObject(parent) {
-    settings = new QSettings(QSettings::IniFormat, QSettings::UserScope, projectName, programName.toLower() + ".targets");
+    iniTargets = new QSettings(QSettings::IniFormat, QSettings::UserScope, projectName, programName.toLower() + ".targets");
     version.clear();
     comment.clear();
     contactUrl.clear();
@@ -51,11 +51,19 @@ void TargetList::purge() {
     groups.clear();
     fileHostsDomestic.clear();
     fileHostsInternational.clear();
-    settings->sync();
+    iniTargets->sync();
 }
 
 
-bool TargetList::isUpdateAvailable() {
+bool TargetList::exists() {
+    if(QFile::exists(iniTargets->fileName()))
+        return true;
+
+    return false;
+}
+
+
+bool TargetList::updateIsAvailable() {
     QNetworkAccessManager manager;
     QNetworkReply *download;
     QEventLoop loop;
@@ -77,7 +85,7 @@ bool TargetList::isUpdateAvailable() {
     download->readLine();
 
     if((remoteVersion = download->readLine().trimmed().right(12)) > version) {
-        emit logMessage(trUtf8("Update available, remote target list version: %1").arg(remoteVersion));
+        emit logMessage(trUtf8("Update available: local target list version is %1, remote is %2").arg(version).arg(remoteVersion));
         delete download;
         return true;
     }
@@ -92,51 +100,41 @@ bool TargetList::downloadList() {
     QNetworkAccessManager manager;
     QNetworkReply *download;
     QEventLoop loop;
-    QString fileName(settings->fileName());
-    QFile file(fileName);
-    QFileInfo info(fileName);
+    QFile file(iniTargets->fileName());
     QTextStream out;
 
     emit logMessage(trUtf8("Downloading new target list"));
 
-    download = manager.get(QNetworkRequest(QUrl(TARGETLISTURL)));
+    download = manager.get(QNetworkRequest(QUrl(TARGETLISTURL)));    // download pointer now does not require manual deleting!
     connect(download, SIGNAL(finished()), &loop, SLOT(quit()));
     loop.exec();
 
     if(download->error()) {
         emit logMessage(trUtf8("Error: Download failed"));
-        delete download;
         return false;
     }
 
     emit logMessage(trUtf8("Download complete. Writing to file"));
 
-    if(!QDir().exists(info.absolutePath())) {
-        QDir().mkdir(info.absolutePath());
-        QFile::setPermissions(info.absolutePath(), QFile::WriteUser);
-    }
-    else
-        if(file.exists())
-            QFile::rename(settings->fileName(), settings->fileName() + ".bak");
+    if(file.exists())
+        QFile::rename(iniTargets->fileName(), iniTargets->fileName() + ".bak");
 
-    if(file.open(QFile::WriteOnly)) {
+    if(file.open(QIODevice::WriteOnly)) {
         out.setDevice(&file);
         out << download->readAll();
         file.close();
         emit logMessage(trUtf8("Wrote %1 bytes").arg(file.size()));
-        delete download;
         return true;
     }
 
-    emit logMessage(trUtf8("Error: Could not open file %1 for write operation").arg(settings->fileName()));
+    emit logMessage(trUtf8("Error: Could not open file %1 for write operation").arg(iniTargets->fileName()));
     emit logMessage(trUtf8("Please check your folder access permissions."));
-    delete download;
     return false;
 }
 
 
 bool TargetList::load() {
-    QString targetListPath = QDir::toNativeSeparators(settings->fileName());
+    QString iniTargetsPath = QDir::toNativeSeparators(iniTargets->fileName());
     int tempNumberOfGroups;
     int tempGroupSize;
     PingGroup newGroup;
@@ -144,28 +142,28 @@ bool TargetList::load() {
     DownloadTarget newDownloadTarget;
 
     purge();
-    emit logMessage(trUtf8("Loading targets from %1").arg(targetListPath));
+    emit logMessage(trUtf8("Loading targets from %1").arg(iniTargetsPath));
 
-    if(!QFile::exists(targetListPath)) {
+    if(!QFile::exists(iniTargets->fileName())) {
         emit logMessage(trUtf8("Error: File not found"));
         return false;
     }
 
-    if(!settings->childGroups().contains("TargetListInfo")) {
+    if(!iniTargets->childGroups().contains("TargetListInfo")) {
         emit logMessage(trUtf8("Error: Section [TargetListInfo] missing"));
         return false;
     }
 
-    version = settings->value("TargetListInfo/Version", QString("")).toString();
+    version = iniTargets->value("TargetListInfo/Version", QString("")).toString();
 
     if(version.isEmpty()) {
         emit logMessage(trUtf8("Error: Key \"Version\" missing from section [TargetListInfo]"));
         return false;
     }
 
-    comment = settings->value("TargetListInfo/Comment", QString("")).toString();
-    contactUrl = settings->value("TargetListInfo/ContactURL", QString("")).toString();
-    tempNumberOfGroups = settings->value("TargetListInfo/NumberOfPingGroups", QString("")).toInt();
+    comment = iniTargets->value("TargetListInfo/Comment", QString("")).toString();
+    contactUrl = iniTargets->value("TargetListInfo/ContactURL", QString("")).toString();
+    tempNumberOfGroups = iniTargets->value("TargetListInfo/NumberOfPingGroups", QString("")).toInt();
 
     if(tempNumberOfGroups < 1) {
         emit logMessage(trUtf8("Error: Key \"NumberOfPingGroups\" missing from section [TargetListInfo] or has incompatible value"));
@@ -176,19 +174,19 @@ bool TargetList::load() {
         newGroup.setSize(0);
         newGroup.targets.clear();
 
-        if(!settings->childGroups().contains(QString("PingGroup%1").arg(i))) {
+        if(!iniTargets->childGroups().contains(QString("PingGroup%1").arg(i))) {
             emit logMessage(trUtf8("Error: Section [PingGroup%1] missing").arg(i));
             return false;
         }
 
-        newGroup.setName(settings->value(QString("PingGroup%1/Name").arg(i), QString("")).toString());
+        newGroup.setName(iniTargets->value(QString("PingGroup%1/Name").arg(i), QString("")).toString());
 
         if(newGroup.getName().isEmpty()) {
             emit logMessage(trUtf8("Error: Key \"Name\" missing from section [PingGroup%1] or has incompatible value").arg(i));
             return false;
         }
 
-        tempGroupSize = settings->value(QString("PingGroup%1/NumberOfTargets").arg(i), QString("")).toInt();
+        tempGroupSize = iniTargets->value(QString("PingGroup%1/NumberOfTargets").arg(i), QString("")).toInt();
 
         if(tempGroupSize < 1) {
             emit logMessage(trUtf8("Error: Key \"NumberOfTargets\" missing from section [PingGroup%1] or has incompatible value").arg(i));
@@ -196,14 +194,14 @@ bool TargetList::load() {
         }
 
         for(int j = 1; j <= tempGroupSize; j++) {
-            newPingTarget.setName(settings->value(QString("PingGroup%1/%2/Name").arg(i).arg(j), QString("")).toString());
+            newPingTarget.setName(iniTargets->value(QString("PingGroup%1/%2/Name").arg(i).arg(j), QString("")).toString());
 
             if(newPingTarget.getName().isEmpty()) {
                 emit logMessage(trUtf8("Error: Key \"%2\\Name\" missing from section [PingGroup%1] or has incompatible value").arg(i).arg(j));
                 return false;
             }
 
-            newPingTarget.setAddress(settings->value(QString("PingGroup%1/%2/Address").arg(i).arg(j), QString("")).toString());
+            newPingTarget.setAddress(iniTargets->value(QString("PingGroup%1/%2/Address").arg(i).arg(j), QString("")).toString());
 
             if(newPingTarget.getAddress().isEmpty()) {
                 emit logMessage(trUtf8("Error: Key \"%2\\Address\" missing from section [PingGroup%1] or is not a proper IP address or URL").arg(i).arg(j));
@@ -223,12 +221,12 @@ bool TargetList::load() {
     }
 
     foreach(QString location, QList<QString>() << "Domestic" << "International") {
-        if(!settings->childGroups().contains("FileHosts" + location)) {
+        if(!iniTargets->childGroups().contains("FileHosts" + location)) {
             emit logMessage(trUtf8("Error: Section [FileHosts%1] missing").arg(location));
             return false;
         }
 
-        tempGroupSize = settings->value(QString("FileHosts%1/NumberOfTargets").arg(location), QString("")).toInt();
+        tempGroupSize = iniTargets->value(QString("FileHosts%1/NumberOfTargets").arg(location), QString("")).toInt();
 
         if(tempGroupSize < 1) {
             emit logMessage(trUtf8("Error: Key \"NumberOfTargets\" missing from section [FileHosts%1] or has incompatible value").arg(location));
@@ -236,14 +234,14 @@ bool TargetList::load() {
         }
 
         for(int i = 1; i <= tempGroupSize; i++) {
-            newDownloadTarget.setName(settings->value(QString("FileHosts%1/%2/Name").arg(location).arg(i), QString("")).toString());
+            newDownloadTarget.setName(iniTargets->value(QString("FileHosts%1/%2/Name").arg(location).arg(i), QString("")).toString());
 
             if(newDownloadTarget.getName().isEmpty()) {
                 emit logMessage(trUtf8("Error: Key \"%1\\Name\" missing from section [FileHosts%2] or has incompatible value").arg(i).arg(location));
                 return false;
             }
 
-            newDownloadTarget.setUrl(QUrl(settings->value(QString("FileHosts%1/%2/URL").arg(location).arg(i), QString("")).toString()));
+            newDownloadTarget.setUrl(QUrl(iniTargets->value(QString("FileHosts%1/%2/URL").arg(location).arg(i), QString("")).toString()));
 
             if(newDownloadTarget.getUrl().isEmpty()) {
                 emit logMessage(trUtf8("Error: Key \"%1\\URL\" missing from section [FileHosts%2] or is not a proper file URL").arg(i).arg(location));
@@ -273,32 +271,35 @@ bool TargetList::load() {
 
 
 bool TargetList::restoreEmbedded() {
-    QString filename(settings->fileName());
-    QFileInfo info(filename);
-    QFile file(filename);
-    QFile embedded(":/defaulttargetlist.ini");
+    QFile file(iniTargets->fileName());
+    QFile embedded(":/default.targets.ini");
 
-    if(!QDir().exists(info.absolutePath()))
-        QDir().mkdir(info.absolutePath());
-    else
-        if(file.exists())
-            QFile::rename(settings->fileName(), settings->fileName() + ".wrong");
+    if(file.exists())
+        QFile::rename(iniTargets->fileName(), iniTargets->fileName() + ".wrong");
 
     emit logMessage(trUtf8("Extracting a default target list from embedded resources"));
 
-    if(embedded.copy(filename)) {
-        emit logMessage(trUtf8("Successfully copied to %1").arg(QDir::toNativeSeparators(filename)));
+    if(embedded.copy(iniTargets->fileName())) {
+        emit logMessage(trUtf8("Successfully copied to %1").arg(QDir::toNativeSeparators(iniTargets->fileName())));
         return true;
     }
 
-    emit logMessage(trUtf8("Error: Could not create file %1").arg(QDir::toNativeSeparators(filename)));
+    emit logMessage(trUtf8("Error: Could not create file %1").arg(QDir::toNativeSeparators(iniTargets->fileName())));
     return false;
 }
 
 
 bool TargetList::init() {
-    load();    // Try to load current target list
-    if(isUpdateAvailable() && downloadList()) {}    // Check online for updated target list and if found, download it
+    QDir dir(QFileInfo(iniTargets->fileName()).absoluteDir());
+
+    if(exists())
+        load();    // Try to load current target list
+    else
+        if(!dir.exists())
+            dir.mkpath(dir.path());
+
+    if(updateIsAvailable())
+        downloadList();    // Check online for updated target list and if found, download it
 
     if(load())    // If current target list loads with no errors...
         return true;    // Enable Start button
